enhance full text search
