# postgres-full-text-search/src/main/resources/openapi/openapi-server.yml
@@ -147,6 +147,16 @@ paths:
           required: true
           schema:
             type: string
+        - name: pageSize
+          in: query
+          required: false
+          schema:
+            type: integer
+        - name: pageNumber
+          in: query
+          required: false
+          schema:
+            type: integer
       responses:
         '200':
           description: Successful operation
